cabal-version:      2.4
name:               jms2clash
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Connor Fang
maintainer:         chfanghr@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable jms2clash
    main-is:          Main.hs

    other-modules:
        Subscription,
        Options

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.3.0,
        servant ^>=0.19,
        text ^>=2.0,
        time ^>=1.9.0,
        servant-server ^>=0.19,
        aeson ^>=2.0.0,
        wai ^>=3.2.0,
        warp ^>=3.3.0,
        hdaemonize ^>=0.5.6,
        base64-bytestring ^>=1.2.0,
        http-client ^>=0.7.0,
        http-conduit ^>=2.3.8,
        http-types ^>=0.12.3,
        bytestring ^>=0.10.12,
        network ^>=3.1.0,
        network-uri ^>=2.6.0,
        exceptions ^>=0.10.4,
        yaml ^>= 0.11.8,
        optparse-applicative ^>=0.17.0,
        stm ^>=2.5.0.1
    hs-source-dirs:   app
    default-language: Haskell2010
